// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompleteListButtons renders refresh disabled when user is not owner 1`] = `
<div>
  <div
    class="float-right btn-group"
    role="group"
  >
    <button
      class="p-0 mr-3 btn btn-link"
      data-test-id="complete-list-refresh"
      disabled=""
      style="pointer-events: none; opacity: 0.3;"
      type="button"
    >
      <i
        class="fa fa-redo fa-2x text-primary"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="complete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`CompleteListButtons renders refresh enabled when user is owner 1`] = `
<div>
  <div
    class="float-right btn-group"
    role="group"
  >
    <button
      class="p-0 mr-3 btn btn-link"
      data-test-id="complete-list-refresh"
      style="pointer-events: auto; opacity: 1;"
      type="button"
    >
      <i
        class="fa fa-redo fa-2x text-primary"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="complete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;
